[gd_scene load_steps=17 format=3 uid="uid://coeaj8kxwl40n"]

[ext_resource type="Script" uid="uid://dt72ltgn4jxc1" path="res://player.gd" id="1_nh0s5"]
[ext_resource type="AudioStream" uid="uid://hqkyh1cub5m3" path="res://sounds/steps.mp3" id="2_pjt0s"]
[ext_resource type="AudioStream" uid="uid://b6mrxjvkccgjg" path="res://sounds/stair_01.mp3" id="3_wa5vi"]
[ext_resource type="AudioStream" uid="uid://cjbghldrpbny0" path="res://sounds/stair_end.mp3" id="4_wfnr8"]
[ext_resource type="AudioStream" uid="uid://bmo4suh4msaig" path="res://sounds/stair_end_short.mp3" id="5_px5sl"]
[ext_resource type="AudioStream" uid="uid://b2tkdrrbmbf4i" path="res://sounds/rumble.ogg" id="6_0qfo5"]
[ext_resource type="AudioStream" uid="uid://d4jjgjoe68hd7" path="res://sounds/silence.ogg" id="7_yxww1"]
[ext_resource type="AudioStream" uid="uid://1s3bhcfwaof3" path="res://sounds/falling_02.ogg" id="9_x1sy7"]
[ext_resource type="AudioStream" uid="uid://dgj80wm05raf0" path="res://sounds/falling_03.ogg" id="10_sm1rv"]
[ext_resource type="AudioStream" uid="uid://04ta0j0ldjga" path="res://sounds/falling_04.ogg" id="11_jx0ln"]
[ext_resource type="AudioStream" uid="uid://ckevg4fus73ye" path="res://sounds/falling_05.ogg" id="12_lpiy1"]
[ext_resource type="AudioStream" uid="uid://bh0opdmd1uyfi" path="res://sounds/falling_06.ogg" id="13_88tkl"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tvkt6"]

[sub_resource type="AudioStreamInteractive" id="AudioStreamInteractive_px5sl"]
clip_count = 4
clip_0/name = &"Walking"
clip_0/stream = ExtResource("3_wa5vi")
clip_0/auto_advance = 0
clip_1/name = &"Stoping"
clip_1/stream = ExtResource("4_wfnr8")
clip_1/auto_advance = 0
clip_2/name = &"Stoping Short"
clip_2/stream = ExtResource("5_px5sl")
clip_2/auto_advance = 0
clip_3/name = &"Silence"
clip_3/stream = ExtResource("7_yxww1")
clip_3/auto_advance = 0
initial_clip = 3
_transitions = {
Vector2i(-1, 0): {
"fade_beats": 1.0,
"fade_mode": 4,
"from_time": 0,
"to_time": 2
},
Vector2i(0, 0): {
"fade_beats": 1.0,
"fade_mode": 4,
"from_time": 0,
"to_time": 2
},
Vector2i(0, 1): {
"fade_beats": 1.0,
"fade_mode": 4,
"from_time": 0,
"to_time": 1
},
Vector2i(0, 2): {
"fade_beats": 0.5,
"fade_mode": 3,
"from_time": 0,
"to_time": 1
},
Vector2i(0, 3): {
"fade_beats": 1.0,
"fade_mode": 3,
"from_time": 0,
"to_time": 1
},
Vector2i(3, 0): {
"fade_beats": 0.5,
"fade_mode": 3,
"from_time": 0,
"to_time": 2
}
}

[sub_resource type="AudioStreamInteractive" id="AudioStreamInteractive_0qfo5"]
clip_count = 2
clip_0/name = &"Rumble"
clip_0/stream = ExtResource("6_0qfo5")
clip_0/auto_advance = 0
clip_1/name = &"Silence"
clip_1/stream = ExtResource("7_yxww1")
clip_1/auto_advance = 0
initial_clip = 1
_transitions = {
Vector2i(0, 1): {
"fade_beats": 1.0,
"fade_mode": 2,
"from_time": 0,
"to_time": 1
},
Vector2i(1, 0): {
"fade_beats": 1.0,
"fade_mode": 1,
"from_time": 0,
"to_time": 2
}
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_y0ipg"]
streams_count = 5
stream_0/stream = ExtResource("9_x1sy7")
stream_1/stream = ExtResource("10_sm1rv")
stream_2/stream = ExtResource("11_jx0ln")
stream_3/stream = ExtResource("12_lpiy1")
stream_4/stream = ExtResource("13_88tkl")

[node name="CharacterBody3D" type="CharacterBody3D"]
collision_layer = 256
collision_mask = 7
platform_floor_layers = 4286578689
script = ExtResource("1_nh0s5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_tvkt6")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="CharacterCamera" type="Camera3D" parent="Head"]
unique_name_in_owner = true
fov = 37.8493
far = 400.0

[node name="HoldedBattery" type="CSGBox3D" parent="Head/CharacterCamera"]
unique_name_in_owner = true
transform = Transform3D(0.987565, -0.15721, 0, 0.15721, 0.987565, 0, 0, 0, 1, 0.140765, -0.164438, -0.410691)
visible = false
size = Vector3(0.191162, 0.0874634, 0.0675049)

[node name="HoldedIdNote" type="CSGBox3D" parent="Head/CharacterCamera"]
unique_name_in_owner = true
transform = Transform3D(0.728019, -0.374702, 0.574097, -0.175515, 0.707634, 0.684433, -0.662709, -0.599043, 0.449405, -0.224989, -0.128699, -0.410691)
visible = false
size = Vector3(0.076416, 0.0874634, 0.0078125)

[node name="StepsAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_pjt0s")
volume_db = -10.0
autoplay = true
bus = &"Player"

[node name="StairAudio" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamInteractive_px5sl")
volume_db = -20.0
autoplay = true
max_polyphony = 4
bus = &"Player"

[node name="RumbleAudio" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamInteractive_0qfo5")
volume_db = -10.0
autoplay = true
bus = &"Player"

[node name="ScaryAudio" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.81374, 1.56484, 2.99213)
stream = SubResource("AudioStreamRandomizer_y0ipg")
